phase-6-production/microservices-demo/01-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
